--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,9 +10,9 @@ jobs:
 
   build:
 
-    runs-on: arm64v8/ubuntu:20.04
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --platform linux/amd64,linux/arm64,linux/arm/v7 --file Dockerfile --tag my-image-name:$(date +%s)
